force-app/main/default/objects/Issue__c/fields/Balance_Print_QTY__c.field-meta.xml
<CustomField>
    <fullName>Balance_Print_QTY__c</fullName>
    <description
  >Shows the number of copies of this issue remaining available for bonus distribution.</description>
    <formula>Max_QTY__c -  Bonus_Distribution_QTY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >Shows the number of copies of this issue remaining available for bonus distribution.</inlineHelpText>
    <label>Copies Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>