force-app/main/default/objects/Issue__c/fields/Bonus_Distribution_QTY__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Distribution_QTY__c</fullName>
    <description
  >Shows the number of copies requested of this issue from all bonus distribution requests.</description>
    <inlineHelpText
  >Shows the number of copies requested of this issue from all bonus distribution requests.</inlineHelpText>
    <label># of Copies Requested</label>
    <summarizedField>Bonus_Distribution__c.QTY__c</summarizedField>
    <summaryForeignKey>Bonus_Distribution__c.Issue_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>