force-app/main/default/objects/Issue__c/fields/Bonus_Distribution_Requests__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Distribution_Requests__c</fullName>
    <description
  >Number of events this issue has been requested to be sent out to.</description>
    <inlineHelpText
  >Number of events this issue has been requested to be sent out to.</inlineHelpText>
    <label># of BD Requests</label>
    <summaryForeignKey>Bonus_Distribution__c.Issue_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>