force-app/main/default/objects/Issue__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description
  >Brand of the Issue (this automatically appends to the name).</description>
    <inlineHelpText
  >Brand of the Issue (this automatically appends to the name).</inlineHelpText>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>CDG</fullName>
            </value>
            <value>
                <fullName>Converge</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>EM</fullName>
            </value>
            <value>
                <fullName>GOV</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>PCIO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>