force-app/main/default/objects/Issue__c/fields/Force_Unique__c.field-meta.xml
<CustomField>
    <fullName>Force_Unique__c</fullName>
    <description
  >Hidden field. forces a unique name for each issue.</description>
    <inlineHelpText
  >Hidden field. forces a unique name for each issue.</inlineHelpText>
    <label>Issue Name Must be Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>