force-app/main/default/objects/Issue__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description
  >Short description of what issue this is, do not include Brand or Year.  Example &quot;Annual TLP&quot; or &quot;January&quot; or &quot;Q1&quot;</description>
    <inlineHelpText
  >Short description of what issue this is, do not include Brand or Year.  Example &quot;Annual TLP&quot; or &quot;January&quot; or &quot;Q1&quot;</inlineHelpText>
    <label>Issue Description</label>
    <length>30</length>
    <type>Text</type>
</CustomField>