force-app/main/default/objects/Issue__c/fields/Max_QTY__c.field-meta.xml
<CustomField>
    <fullName>Max_QTY__c</fullName>
    <defaultValue>500</defaultValue>
    <description
  >The maximum quantity allowed for bonus distribution of this issue.</description>
    <inlineHelpText
  >The maximum quantity allowed for bonus distribution of this issue.</inlineHelpText>
    <label>Max Limit of Copies</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>