force-app/main/default/objects/Issue__c/listViews/All18.listView-meta.xml
<ListView>
    <fullName>All18</fullName>
    <columns>NAME</columns>
    <columns>Max_QTY__c</columns>
    <columns>Bonus_Distribution_QTY__c</columns>
    <columns>Balance_Print_QTY__c</columns>
    <columns>Bonus_Distribution_Requests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Content Studio</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>Content Studio - 2018</label>
</ListView>