force-app/main/default/objects/Issue__c/listViews/All2.listView-meta.xml
<ListView>
    <fullName>All2</fullName>
    <columns>Brand__c</columns>
    <columns>NAME</columns>
    <columns>Bonus_Distribution_Requests__c</columns>
    <columns>Max_QTY__c</columns>
    <columns>Bonus_Distribution_QTY__c</columns>
    <columns>Balance_Print_QTY__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Issues of All Publications</label>
</ListView>