force-app/main/default/objects/Issue__c/listViews/mag2018.listView-meta.xml
<ListView>
    <fullName>mag2018</fullName>
    <columns>NAME</columns>
    <columns>Issue_Description__c</columns>
    <columns>Max_QTY__c</columns>
    <columns>Bonus_Distribution_QTY__c</columns>
    <columns>Balance_Print_QTY__c</columns>
    <columns>Bonus_Distribution_Requests__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Magazine</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>equals</operation>
        <value>2018</value>
    </filters>
    <label>Magazine - 2018</label>
</ListView>